--- a/modules-available/statistics_reporting/templates/columnChooser.html
+++ b/modules-available/statistics_reporting/templates/columnChooser.html
@@ -15,7 +15,7 @@
 				<div class="col-md-2">
 					<select name="type" id="select-table" class="form-control">
 						{{#tables}}
-						<option value="{{value}}" {{selected}}>{{name}}</option>
+						<option {{^allowed}}disabled{{/allowed}} value="{{value}}" {{selected}}>{{name}}</option>
 						{{/tables}}
 					</select>
 				</div>
@@ -45,7 +45,7 @@
 							<option value="xml">XML</option>
 						</select>
 						<div class="input-group-btn">
-							<button type="submit" class="btn btn-default" name="action" value="export">{{lang_export}}</button>
+							<button {{^allowedExport}}disabled {{/allowedExport}} type="submit" class="btn btn-default" name="action" value="export">{{lang_export}}</button>
 						</div>
 					</div>
 				</div>
@@ -86,18 +86,18 @@
 			</div>
 			<div class="modal-body">
 				<div class="checkbox">
-					<input id="checkbox-reporting" type="checkbox" value="on" {{reportChecked}}>
-					<label for="checkbox-reporting" style="padding-left: 40px">{{lang_reportingLabel}}</label>
+					<input {{^allowedReportChange}}disabled {{/allowedReportChange}} id="checkbox-reporting" type="checkbox" value="on" {{reportChecked}}>
+					<label for="checkbox-reporting" style="padding-left: 20px">{{lang_reportingLabel}}</label>
 				</div>
 				<div>
 					<p>{{lang_reportingDescription}}</p>
 					<p><a href="https://www.bwlehrpool.de/doku.php/satellite/statistics_reporting" target="_blank">{{lang_reportMoreInfo}}</a></p>
-					<a class="btn btn-success" href="?do=statistics_reporting&amp;action=getreport">{{lang_downloadReport}}</a>
 				</div>
 			</div>
 			<div class="modal-footer">
+				<button {{^allowedDownload}}disabled {{/allowedDownload}} class="btn btn-warning pull-left" onclick="window.location.href='?do=statistics_reporting&amp;action=getreport'">{{lang_downloadReport}}</button>
 				<button type="button" class="btn btn-default" data-dismiss="modal">{{lang_cancel}}</button>
-				<button type="button" class="btn btn-primary" data-dismiss="modal" onclick="saveSettings()">{{lang_save}}</button>
+				<button {{^allowedReportChange}}disabled {{/allowedReportChange}} type="button" class="btn btn-primary" data-dismiss="modal" onclick="saveSettings()">{{lang_save}}</button>
 			</div>
 		</div>
 
